// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Files Component  should not render component with no files 1`] = `""`;

exports[`Files Component  should not render cultural message 1`] = `
<section>
  <StandardCard
    className=""
    title="Files"
  >
    <Table
      allRowsSelected={false}
      className="files horizontal"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="header"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="filetype"
          />
          <TableHeaderColumn
            className="filename"
          >
            File name
          </TableHeaderColumn>
          <TableHeaderColumn
            className="description is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
          >
            Size
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="data"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          className="file"
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="file-3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="filetype fileIcon"
            hoverable={false}
          >
            <EditorInsertDriveFile />
          </TableRowColumn>
          <TableRowColumn
            className="filename"
            hoverable={false}
          >
            <ExternalLink
              className="fileName"
              href="https://fez-staging.library.uq.edu.au/view/UQ:676287/UQ676287_OA.pdf"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="UQ676287_OA.pdf - undefined - undefined"
            >
              UQ676287_OA.pdf
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="is-hidden-mobile description"
            hoverable={false}
          />
          <TableRowColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
            hoverable={false}
          />
        </TableRow>
        <TableRow
          className="file"
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="file-4"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="filetype fileIcon"
            hoverable={false}
          >
            <ImageImage />
          </TableRowColumn>
          <TableRowColumn
            className="filename"
            hoverable={false}
          >
            <ExternalLink
              className="fileName"
              href="https://fez-staging.library.uq.edu.au/view/UQ:676287/image.jpg"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="image.jpg - testing image description - 95.49 KB"
            >
              image.jpg
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="is-hidden-mobile description"
            hoverable={false}
          >
            testing image description
          </TableRowColumn>
          <TableRowColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
            hoverable={false}
          >
            95.49 KB
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </StandardCard>
</section>
`;

exports[`Files Component  should render component 1`] = `
<section>
  <StandardCard
    className=""
    title="Files"
  >
    <Table
      allRowsSelected={false}
      className="files horizontal"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="header"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="filetype"
          />
          <TableHeaderColumn
            className="filename"
          >
            File name
          </TableHeaderColumn>
          <TableHeaderColumn
            className="description is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
          >
            Size
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="data"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          className="file"
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="file-3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="filetype fileIcon"
            hoverable={false}
          >
            <EditorInsertDriveFile />
          </TableRowColumn>
          <TableRowColumn
            className="filename"
            hoverable={false}
          >
            <ExternalLink
              className="fileName"
              href="https://fez-staging.library.uq.edu.au/view/UQ:676287/UQ676287_OA.pdf"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="UQ676287_OA.pdf - undefined - undefined"
            >
              UQ676287_OA.pdf
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="is-hidden-mobile description"
            hoverable={false}
          />
          <TableRowColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
            hoverable={false}
          />
        </TableRow>
        <TableRow
          className="file"
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="file-4"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="filetype fileIcon"
            hoverable={false}
          >
            <ImageImage />
          </TableRowColumn>
          <TableRowColumn
            className="filename"
            hoverable={false}
          >
            <ExternalLink
              className="fileName"
              href="https://fez-staging.library.uq.edu.au/view/UQ:676287/image.jpg"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="image.jpg - testing image description - 95.49 KB"
            >
              image.jpg
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="is-hidden-mobile description"
            hoverable={false}
          >
            testing image description
          </TableRowColumn>
          <TableRowColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
            hoverable={false}
          >
            95.49 KB
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </StandardCard>
</section>
`;

exports[`Files Component  should render cultural message 1`] = `
<section>
  <StandardCard
    className=""
    title="Files"
  >
    <Alert
      allowDismiss={true}
      dismissAction={[MockFunction]}
      message="hello"
      showLoader={false}
      type="info"
    />
    <Table
      allRowsSelected={false}
      className="files horizontal"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="header"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="filetype"
          />
          <TableHeaderColumn
            className="filename"
          >
            File name
          </TableHeaderColumn>
          <TableHeaderColumn
            className="description is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
          >
            Size
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="data"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          className="file"
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="file-3"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="filetype fileIcon"
            hoverable={false}
          >
            <EditorInsertDriveFile />
          </TableRowColumn>
          <TableRowColumn
            className="filename"
            hoverable={false}
          >
            <ExternalLink
              className="fileName"
              href="https://fez-staging.library.uq.edu.au/view/UQ:676287/UQ676287_OA.pdf"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="UQ676287_OA.pdf - undefined - undefined"
            >
              UQ676287_OA.pdf
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="is-hidden-mobile description"
            hoverable={false}
          />
          <TableRowColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
            hoverable={false}
          />
        </TableRow>
        <TableRow
          className="file"
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="file-4"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="filetype fileIcon"
            hoverable={false}
          >
            <ImageImage />
          </TableRowColumn>
          <TableRowColumn
            className="filename"
            hoverable={false}
          >
            <ExternalLink
              className="fileName"
              href="https://fez-staging.library.uq.edu.au/view/UQ:676287/image.jpg"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="image.jpg - testing image description - 95.49 KB"
            >
              image.jpg
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="is-hidden-mobile description"
            hoverable={false}
          >
            testing image description
          </TableRowColumn>
          <TableRowColumn
            className="align-right is-hidden-mobile is-hidden-tablet-only size"
            hoverable={false}
          >
            95.49 KB
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </StandardCard>
</section>
`;

exports[`Files Component  should render icon for mimeType 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EditorInsertDriveFile />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <path
        d="M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z"
      />,
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "viewBox": "0 0 24 24",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "d": "M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z",
      },
      "ref": null,
      "rendered": null,
      "type": "path",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <path
          d="M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z"
        />,
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "viewBox": "0 0 24 24",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "d": "M6 2c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6H6zm7 7V3.5L18.5 9H13z",
        },
        "ref": null,
        "rendered": null,
        "type": "path",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImageImage />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <path
        d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
      />,
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "viewBox": "0 0 24 24",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "d": "M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z",
      },
      "ref": null,
      "rendered": null,
      "type": "path",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <path
          d="M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z"
        />,
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "viewBox": "0 0 24 24",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "d": "M21 19V5c0-1.1-.9-2-2-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zM8.5 13.5l2.5 3.01L14.5 12l4.5 6H5l3.5-4.5z",
        },
        "ref": null,
        "rendered": null,
        "type": "path",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AvVideocam />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <path
        d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"
      />,
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "viewBox": "0 0 24 24",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "d": "M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z",
      },
      "ref": null,
      "rendered": null,
      "type": "path",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <path
          d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"
        />,
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "viewBox": "0 0 24 24",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "d": "M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z",
        },
        "ref": null,
        "rendered": null,
        "type": "path",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AvVolumeUp />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <path
        d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
      />,
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "viewBox": "0 0 24 24",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "d": "M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z",
      },
      "ref": null,
      "rendered": null,
      "type": "path",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <path
          d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
        />,
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "viewBox": "0 0 24 24",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "d": "M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z",
        },
        "ref": null,
        "rendered": null,
        "type": "path",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;

exports[`Files Component  should render icon for mimeType 5`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ImagePictureAsPdf />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <path
        d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
      />,
      "onMouseEnter": [Function],
      "onMouseLeave": [Function],
      "viewBox": "0 0 24 24",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "d": "M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z",
      },
      "ref": null,
      "rendered": null,
      "type": "path",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <path
          d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
        />,
        "onMouseEnter": [Function],
        "onMouseLeave": [Function],
        "viewBox": "0 0 24 24",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "d": "M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z",
        },
        "ref": null,
        "rendered": null,
        "type": "path",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
